# Md-CD1-30-24

./: .gitignore  .gitignore.txt  README.md  Source.cpp
Alexandr_Kartavitsky/: program.cpp  readme.txt.txt  task2Fix.cpp
Alexandr_Kartavitsky/Blackjack/: Blackjack.cpp
Alexandr_Kartavitsky/BlackjackFix/: Blackjack.cpp
Alexandr_Kartavitsky/cpptask2/: create_file.h  fixTask2.cpp  r_file.h  sum_ave.h  write_endd_file.h
Alexandr_Kartavitsky/task3/: brakets.txt  check_brackets.h  result.txt  task3.cpp
Alexandr_Kartavitsky/task4/: CMakeLists.txt  String.cpp  String.h  test.cpp
Alexandra_Nikitina/: .gitignore  readme.txt.txt
Alexandra_Nikitina/task_2_lessons_3_4/: nikitina_task 2_lessons_3_4.cpp
Alexandra_Nikitina/task_3_lessons_5_6/: for_check.txt  nikitina_task_3_lessons_5_6.cpp  numbers.cpp
Alexandra_Nikitina/task_4/: task_4.cpp
Alexandra_Nikitina/task_5/: CMakeLists.txt  NewString.cpp  NewString.h  nikitina_task_5.cpp  task_5.5.cpp
Alexandra_Nikitina/task_7/: CMakeLists.txt  task_7.cpp  tests_task_7.cpp
Alexandra_Nikitina/task_8/: example.txt  task_8.cpp
Artyom_Belnev/: .gitignore  readme.txt
Artyom_Belnev/Task7/: Task7.sln
Artyom_Belnev/Task_2/: Task_2.vcxproj  main.cpp
Artyom_Belnev/Task_3/: Task_3.sln  Task_3.vcxproj  main.cpp
Artyom_Belnev/Task_5/: MyString.sln  Task_5.sln
Artyom_Belnev/Task_8/: Task_8.sln
Kostya_Timoshenko/: .gitignore  readme.txt
Kostya_Timoshenko/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Kostya_Timoshenko/Task3/: Task3.sln  Task3.vcxproj  Task3.vcxproj.filters  Task3_1.cpp
Kostya_Timoshenko/Task3_2/: Task3_2.cpp  Task3_2.vcxproj  Task3_2.vcxproj.filters  c.txt  result.txt
Kostya_Timoshenko/Task4/: Task4.cpp  Task4.sln  Task4.vcxproj
Kostya_Timoshenko/Task5/: MyClass.h  Task5.sln  Task5.vcxproj  clear_test.cpp  construct_test.cpp  empty_test.cpp  find_test.cpp  main.cpp  pop_back_test.cpp  push_back_test.cpp  replace_test.cpp  size_test.cpp  sort_test.cpp  swap_test.cpp
Mariya_Mahnach/: readme.txt
Mariya_Mahnach/task4/: task4.sln
Nikita_Mankevich/: readme.txt
Nikita_Mankevich/task_2_file/: main.cpp
Nikita_Mankevich/task_3_mas/: main.cpp
Nikolai_Ivanov/: readme.txt
Nikolai_Ivanov/Task2_Ivanov_corr/: Task2_Ivanov.sln
Nikolai_Ivanov/Task_5/: MyString.cpp  test.cpp
Task2/Task2/: test.txt
Task_2/: Task2.sln
Task_2/Task2/: Task2.cpp
Task_2_correct/: Task2_correct.cpp
Task_4_Black_Jack/Black_Jack/: Black_Jack.sln
Task_5/: pch.h  task5.vcxproj
Task_7/task7/: task7.sln
Vasilij_Kluev/: readme.txt
Vasilij_Kluev/BlackJeck/: BlackJeck.cpp
Vasilij_Kluev/HW_Lesson_3/: .gitinore  HW_Lesson_3.cpp  Project4.vcxproj  read.txt
Vasilij_Kluev/Task_2_Kluev/: Source.cpp
Vasilij_Kluev/Task_5_Kluev/: .gitignore  test.cpp
Vlad_Salnikov/: .gitignore  readme.txt
Vlad_Salnikov/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  file.cpp  file.h  main.cpp  numCheck.cpp  numCheck.h  task_2.cpp  task_2.h
Vlad_Salnikov/Task8/: Timer.h  task8.cpp  textWrite.txt
Vlad_Salnikov/Test/: Test.cpp  Test.sln  Test.vcxproj
Vlad_Salnikov/task4BlackJack/: Blackjack.cpp  Blackjack.sln  Blackjack.vcxproj  Player.cpp  Player.h
Vlad_Salnikov/task5/: Gtest1.vcxproj  StringCustom.cpp  StringCustom.h  test.cpp
Vlad_Salnikov/task5v2/: Gtest1.sln  Gtest1.vcxproj  StringCustom.cpp  StringCustom.h  test.cpp
Vlad_Salnikov/task7/: Figures.cpp  Figures.h  Figures.sln  Figures.vcxproj  test.cpp
Vlad_Salnikov/task8v2/: Timer.h  task8.cpp  task8.sln  task8.vcxproj  textRead.txt  textWrite.txt
Vladimir_Shedzko/: .gitignore  readme.txt
Vladimir_Shedzko/Lesson 11/: CMakelists.txt  ReadME.md  customString.cpp  customString.h  customStringTest.cpp  task_5.cpp
Vladimir_Shedzko/Lesson 16/: CMakeLists.txt
Vladimir_Shedzko/Lesson 16/include/: Container.h  Figures.h
Vladimir_Shedzko/Lesson 16/src/: Container.cpp  Figures.cpp  task_6.cpp
Vladimir_Shedzko/Lesson 19/: README.md  input.txt  main.cpp  output.txt
Vladimir_Shedzko/Lesson 3/: numbers.txt  task_3_1.cpp
Vladimir_Shedzko/Lesson 5/: input.c  output.txt  task3_1.cpp  task3_2.cpp
Vladimir_Shedzko/Lesson 7/: task_4_1.cpp
Vladislav_Kebets/: readme.txt
Vladislav_Kebets/task1/: task1.sln
Vladislav_Kebets/task2/: task2.sln
Vladislav_Kebets/task4/: blackjack.sln
Vladislav_Kebets/task_5/: task_5.sln
Vladislav_Kebets/task_8/: threads.sln
Yury_Rusovich_Trener/: readme.txt
Yury_Rusovich_Trener/Lesson 1/: Task.txt
Yury_Rusovich_Trener/Lesson 3/: task.txt
Yury_Rusovich_Trener/Lesson 5/: task3.txt
Yury_Rusovich_Trener/lesson 11_task/: task_4.txt
Yury_Rusovich_Trener/lesson 13_task/: task_5.txt
Yury_Rusovich_Trener/lesson 16_task/: task_6.txt
Yury_Rusovich_Trener/lesson 17_task/: task_7.txt
Yury_Rusovich_Trener/lesson 19_task/: task.txt
Yury_Rusovich_Trener/lesson 7_task/: task4.txt
evgeny_lauman/: readme.txt
evgeny_lauman/task2/: main.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
(+333 files in other folders)
